# worblehat

./: .gitignore  README.md  alembic.ini  config-template.toml  flake.nix  pyproject.toml  worblehat-banner.txt
data/: arbeidsrom_smal_hylle_5.csv
nix/: module.nix
nix/nixos-configurations/: vm-non-kiosk.nix  vm.nix
src/worblehat/: main.py
src/worblehat-frontend/: package.json
src/worblehat-frontend/src/: App.tsx  Books.tsx  FrontPage.tsx
src/worblehat-frontend/src/components/: Book.tsx  NavBar.tsx
src/worblehat/book_data_fetchers/: BookData.py  BookDataFetcher.py  __init__.py  book_data_fetcher.py
src/worblehat/book_data_fetchers/fetchers/: GoogleBooksFetcher.py  OpenLibraryFetcher.py  OutlandScraperFetcher.py
src/worblehat/cli/: __init__.py  main.py  prompt_utils.py
src/worblehat/cli/subclis/: __init__.py  advanced_options.py  bookcase_item.py  bookcase_shelf_selector.py  search.py
src/worblehat/deadline_daemon/: __init__.py  main.py
src/worblehat/devscripts/: batch_scanner.py  seed_content_for_deadline_daemon.py  seed_test_data.py
src/worblehat/flaskapp/: flaskapp.py  wsgi_dev.py  wsgi_prod.py
src/worblehat/flaskapp/blueprints/: main.py
src/worblehat/flaskapp/templates/: base.html
src/worblehat/flaskapp/templates/main/: index.html  login.html
src/worblehat/models/: Author.py  Base.py  Bookcase.py  BookcaseItem.py  BookcaseItemBorrowing.py  BookcaseItemBorrowingQueue.py  BookcaseShelf.py  Category.py  DeadlineDaemonLastRunDatetime.py  Language.py  MediaType.py  __init__.py
src/worblehat/models/migrations/: env.py
src/worblehat/models/migrations/versions/: 2024-07-31T2107_7dfbf8a8dec8_initial_migration.py
src/worblehat/models/mixins/: UidMixin.py  UniqueNameMixin.py  XrefMixin.py  __init__.py
src/worblehat/models/xref_tables/: Item_Author.py  Item_Category.py  __init__.py
src/worblehat/services/: __init__.py  argument_parser.py  bookcase_item.py  config.py  email.py  seed_test_data.py
src/worblehat/services/metadata_fetchers/: BookMetadata.py  BookMetadataFetcher.py  GoogleBooksFetcher.py  OpenLibraryFetcher.py  OutlandScraperFetcher.py  __init__.py  book_metadata_fetcher.py
worblehat/: main.py
worblehat/cli/: main.py
worblehat/cli/subclis/: advanced_options.py  bookcase_item.py  search.py
worblehat/devscripts/: seed_test_data.py
worblehat/flaskapp/: flaskapp.py
worblehat/flaskapp/api/: openapi.yaml
worblehat/models/: BookMetadata.py  BookcaseItem.py  BookcaseItemBorrowingQueue.py  DeadlineDaemonLastRunDatetime.py
worblehat/models/migrations/versions/: 2024-07-28T1412_c3fcf3d979ea_initial_migration.py  2024-07-31T2107_7dfbf8a8dec8_initial_migration.py
worblehat/services/: argument_parser.py  bookcase_item.py  config.py
worblehat/services/metadata_fetchers/: BookMetadata.py  BookMetadataFetcher.py  GoogleBooksFetcher.py  GooglebooksFetcher.py  OpenlibraryFetcher.py  OutlandScraperFetcher.py  StorygraphFetcher.py  __init__.py  base_fetcher.py  book_metadata_fetcher.py  openlibrary_fetcher.py  outland_scraper_fetcher.py
