[project]
name = "worblehat"
version = "0.1.0"
description = "Worblehat is a simple library management system written specifically for Programvareverkstedet"
authors = []
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "beautifulsoup4>=4.12.3",
  "click>=8.1.7",
  "flask-admin>=1.6.1",
  "flask-sqlalchemy>=3.1.1",
  "flask>=3.0.3",
  "isbnlib>=3.10.14",
  "libdib",
  "psycopg2-binary>=2.9.9",
  "requests>=2.32.3",
  "sqlalchemy>=2.0.34",
]

[dependency-groups]
dev = [
  "werkzeug",
  "poethepoet",
]

[project.scripts]
worblehat = "worblehat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
clean = """
    rm -rf
       ./**/__pycache__
       ./**/worblehat.sqlite
"""

# Migration related
genmigration = "alembic revision --autogenerate -m"
migrate = "alembic upgrade head"
downmigrate = "alembic downgrade -1"
# Be careful with cleanmigrations. If you run migrate a database and then
# delete the migration file with this, there will be no easy way of downgrading
cleanmigrations = "git clean -f worblehat/models/migrations/versions"

[tool.uv.sources]
libdib = { git = "https://git.pvv.ntnu.no/Projects/libdib.git" }
